# delta-swing

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/deltaswing/: DeltaSwingApp.kt
app/src/main/java/com/deltaswing/data/repository/: AuthRepositoryImpl.kt  StockRepositoryImpl.kt
app/src/main/java/com/deltaswing/data/worker/: StockPriceCheckWorker.kt
app/src/main/java/com/deltaswing/di/: AppModule.kt
app/src/main/java/com/deltaswing/domain/model/: PricePoint.kt  Stock.kt
app/src/main/java/com/deltaswing/presentation/: MainActivity.kt
app/src/main/res/drawable/: ic_notification.xml
app/src/main/res/values/: strings.xml  themes.xml
cadence/: .gitignore  alembic.ini  pyproject.toml
cadence/app/: config.py  database.py  main.py
cadence/app/models/: __init__.py  base.py  business_objective.py  enums.py  external_reference.py  project.py  tag.py  team.py  team_member.py
cadence/app/routers/: business_objectives.py  external_references.py  projects.py  tags.py  team_members.py  teams.py
cadence/app/schemas/: business_objective.py  external_reference.py  project.py  tag.py  team.py  team_member.py
cadence/app/services/: business_objective_service.py  external_reference_service.py  project_service.py  tag_service.py  team_member_service.py  team_service.py
cadence/tests/: conftest.py  test_business_objectives.py  test_projects.py  test_tags.py  test_team_members.py  test_teams.py
gradle/: libs.versions.toml
(+19 files in other folders)
